todo-app * add dark-theme support WIP * fix overflow for list

--- a/src/App.scss
+++ b/src/App.scss
@@ -5,6 +5,7 @@
   display: flex;
   flex-direction: column;
   margin: 0;
+  height: 100vh;
 
   &.dark-theme{
     color: $dark-text-color;
